[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

# Project metadata per PEP 621
[project]
name = "toolbox"
version = "1.2.0"
description = "A set of useful command-line tools for enhancing productivity."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
	{ name = "o0fung" }
]
dynamic = ["dependencies"]
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	"Environment :: Console",
	"Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/o0fung/toolbox"

# Console scripts (entry points)
[project.scripts]
lf = "go:app"

# Setuptools-specific configuration
[tool.setuptools]
include-package-data = true
py-modules = ["go"]

[tool.setuptools.packages.find]
include = ["tools*"]

# Read runtime dependencies from requirements.txt for a single source of truth
[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
