[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lf-toolbox"
version = "1.11.0"
description = "CLI toolbox with tree/work, YouTube helpers, terminal clock, cheque wording, and CSV plotting."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "lf" }
]
keywords = ["cli", "toolbox", "typer", "utilities", "productivity"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Utilities",
]
dependencies = [
    "numpy>=2.0.0",
    "PyQt6>=6.7.0",
    "pyqtgraph>=0.13.7",
    "rich>=14.0.0",
    "typer>=0.16.0",
    "yt-dlp>=2025.8.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]
publish = ["build>=1.2.2", "twine>=6.1.0"]
plot = ["python-dateutil>=2.9.0.post0"]

[project.urls]
Homepage = "https://github.com/o0fung/toolbox"
Repository = "https://github.com/o0fung/toolbox"
Issues = "https://github.com/o0fung/toolbox/issues"

[project.scripts]
lf = "cli:app"

[tool.setuptools]
include-package-data = true
py-modules = ["cli"]

[tool.setuptools.packages.find]
include = ["tools*"]
exclude = ["backup*", "tests*"]
